fix: Add seminar/** path to GitHub Actions workflow trigger
- Previous configuration was missing 'seminar/**' in paths filter
- This caused seminar page updates to not trigger automatic deployment
- Had to manually trigger workflow with workflow_dispatch
- Now seminar updates will deploy automatically like colloquium and courses

Co-Authored-By: engineer-agent <engineer@honeymath.ai>

--- a/.github/workflows/deploy-vitepress-main.yml
+++ b/.github/workflows/deploy-vitepress-main.yml
@@ -9,6 +9,7 @@ on:
       - '.vitepress/**'
       - 'index.md'
       - 'colloquium/**'
+      - 'seminar/**'
       - 'courses/**'
       - 'docs/**'
       - 'package.json'
